--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ li, a, ul{
     margin: 0 auto;
 }
 
+h6{
+    font-size: 24px;
+    font-weight: bold;
+}
+
 .purple__text{
     color: #6415ff;
 }
@@ -32,10 +37,20 @@ li, a, ul{
     padding: 96px 0px;
 }
 
+button{
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
 #landing{
     padding: 32px 32px 0px 32px;
 }
 
+#quality,
+#steps,
+#pricing{
+    padding: 0 32px;
+}
 
 /* Navigation*/
 
@@ -84,14 +99,13 @@ li, a, ul{
 }
 
 .btn{
-    font-size: 20px;
-    font-weight: 500;
-    border-radius: 25px;
-    padding: 12px 32px;
+    padding: 16px 32px;
+    border-radius: 50px;
     background-color: #6415ff;
+    font-size: 18px;
     color: white;
-     cursor: pointer;
-    
+    font-weight: 600;
+    border: none;
 }
 
 /* Header */
@@ -281,11 +295,6 @@ h5{
 
 /* Quality */ 
 
-#quality,
-#steps{
-    padding: 0 32px;
-}
-
 .quality__title{
     margin-top: 16px;
 }
@@ -322,6 +331,16 @@ h5{
 .quality__img--wrap{
     width: 50%;
     position: relative;
+}
+
+.quality__btn{
+    background-color: #6415ff;
+    border-radius: 25px;
+    padding: 16px 32px;
+    border: none;
+    font-size: 18px;
+    color: white;
+    font-weight: 600;
 }
 
 /* Steps */
@@ -392,6 +411,53 @@ h5{
     margin-top: 24px;
 }
 
+.offers{
+    display: flex;
+    margin-bottom: 36px;
+}
+
+.offer{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    margin-right: 24px;
+}
+
+.offer__header{
+    display: flex;
+    margin-bottom: 16px;
+}
+
+.offer__name{
+    color: #243363;
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 16px;
+    display: flex;
+    align-items: center;
+}
+
+.offer__desc{
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.offer__icon1{
+    display: flex;
+    padding: 8px;
+    background-color: #9ae6b4;
+    border-radius: 100%;
+    color: rgb(39 103 73);
+}
+
+.offer__icon2{
+    display: flex;
+    padding: 8px;
+    background-color: rgb(254 178 178);
+    border-radius: 100%;
+    color: rgb(155 44 44);
+}
+
 .offers__img--wrapper{
     width: 50%;
     display: flex;
@@ -401,4 +467,144 @@ h5{
 
 .offers__img{
     width: 100%;
+}
+
+/* Pricing */
+
+.pricing__info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.pricing__plans{
+    display: flex;
+    
+}
+
+.plan{
+    width: calc(30%);
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #e5e7eb;
+    border-radius: 10px;
+    text-align: center;
+    padding: 24px 0px;
+    margin: 16px;
+    position: relative;
+}
+
+.personal__top--border{
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    background-image: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.personal__top,
+.business__top,
+.enterprise__top{
+    padding: 24px 0px 32px 0px;
+}
+
+.prices{
+    margin: 16px 0px;
+}
+
+.rate{
+    color: #A0AEC0;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+}
+
+.personal__middle,
+.business__middle,
+.enterprise__middle{
+    padding: 24px;
+    border-top: 1px solid #e5e7eb;
+    border-bottom: 1px solid #e5e7eb;
+}
+
+.personal__middle--desc,
+.business__middle--desc,
+.enterprise__middle--desc{
+    margin-top: 14px;
+
+}
+
+.personal__bottom,
+.business__bottom,
+.enterprise__bottom{
+    padding: 24px;
+}
+
+.personal__button{
+    border-radius: 30px;
+    padding: 20px 75px;
+    font-size: 14px;
+    border: none;
+    color: white;
+    font-weight: 600;
+    margin-top: 24px;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    cursor: pointer;
+}
+
+.business__plan{
+    background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+}
+
+.business__header,
+.business__price,
+.business__rate,
+.business__middle--desc{
+    color: white;
+}
+
+.business__button{
+    border-radius: 30px;
+    padding: 20px 75px;
+    font-size: 14px;
+    border: none;
+    background-color: white;
+    color: #6415ff;
+    font-weight: 600;
+    margin-top: 24px;
+    cursor: pointer;
+}
+
+.enterprise__top--border{
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    background-image: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+}
+
+.enterprise__button{
+    border-radius: 30px;
+    padding: 20px 75px;
+    font-size: 14px;
+    border: none;
+    color: white;
+    font-weight: 600;
+    margin-top: 24px;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    cursor: pointer;
+}
+
+.personal__button:hover,
+.business__button:hover,
+.enterprise__button:hover{
+    transform: translate(1px, 1px);
+    box-shadow: 4px 6px 8px rgba(0, 0, 0, 0.15);
 }
