--- a/styles.css
+++ b/styles.css
@@ -952,7 +952,7 @@ footer{
 }
 
 @media (max-width: 640px){
-    .titlle{
+    .title{
         text-align: center;
     }
 
@@ -983,8 +983,74 @@ footer{
 }
 
 @media (max-width: 768px){
+
+    .h5{
+       
+    }
+
+    .text{
+        text-align: center;
+        max-width: 450px;
+    }
+
+    .flex__row{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .quality__img--wrap{
+        margin-bottom: 40px;
+    }
+
+    .quality__info{
+        text-align: center;
+    }
+
+    .steps__info{
+        text-align: center;
+        margin-bottom: 24px;
+        width: 75%;
+    }
+
+    .step__desc{
+        margin-top: 8px;
+        text-align: center;
+    }
+
+    .step{
+        display: block;
+    }
+
+    .values__info{
+        text-align: center;
+        margin-top: 50px;
+        width: 75%;
+    }
+
+    .offers{
+        align-items: center;
+    }
     
+    .offer__header{
+        justify-content: center;
+    }
+
+    .testimonials__info{
+        align-items: center;
+        text-align: center;
+    }
+
+    .font__awesome--stars{
+        margin-top: 8px;
+    }
+
+    .footer__close{
+        display: flex;
+        flex-direction: column;
+    }
 }
+
+
 
 @media (max-width: 1024px) {
     h1 {
