--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,10 @@ button{
     color: #6415ff
 }
 
+.nav__link--login:hover{
+    color: #6415ff
+}
+
 .btn{
     padding: 16px 32px;
     border-radius: 50px;
@@ -146,6 +150,72 @@ button{
 
 .btn:hover{
     background-color: rgb(80 17 204);
+}
+
+.btn__menu{
+    background-color: transparent;
+    border: none;
+    text-align: center;
+    font-size: 24px;
+    display: none;
+}
+
+.btn__menu:hover{
+    color: #6415ff;
+}
+
+.menu__backdrop{
+        position: absolute;
+        margin: 24px 16px;
+        padding: 32px;
+        background-color: #fff;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 2;
+        text-align: center;
+        height: 400px;
+        border-radius: 25px;
+        border: 2px solid rgb(236, 236, 236);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 300ms ease;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__link:hover{
+    color: #6415ff;
+}
+
+.menu__list {
+    margin: 12px 0px;
+    padding: 0px 0px 4px;
+    font-size: 18px;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: #6415ff;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.fas.fa-times:hover{
+    color: black;
 }
 /* Header */
 
@@ -911,6 +981,31 @@ footer{
     color: white;
     font-size: 16px;
     padding-bottom: 24px;
+    max-width: fit-content;
+}
+
+.link:hover{
+    color: black;
+}
+
+.footer__link-hover--effect {
+    position: relative;
+}
+
+.footer__link-hover--effect:after{
+    content: "";
+    position: absolute;
+    bottom: 20px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    background-color: black;
+    transition: all 300ms ease;
+}
+
+.footer__link-hover--effect:hover:after{
+    left: 0;
+    width: 100%;
 }
 
 .break__line{
@@ -951,7 +1046,7 @@ footer{
     background-color: #CBD5E0;
 }
 
-@media (max-width: 640px){
+@media (max-width: 550px){
     .title{
         text-align: center;
     }
@@ -1055,6 +1150,14 @@ footer{
 @media (max-width: 1024px) {
     h1 {
         font-size: 30px;
+    }
+
+    .nav__link, .nav__link--login, .nav .btn{
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
     }
 
     .column {
